--- a/public/css/site.css
+++ b/public/css/site.css
@@ -10,6 +10,7 @@ body {
 }
 
 .timetable {
+  color: #CCC;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.25vh;
   background-color: rgb(60, 65, 60);
@@ -26,20 +27,19 @@ body {
   color:        white;
   font-size:      110%;
   font-weight:    bold;
+  padding:        1em 0em;
   text-align:     center;
   text-transform: uppercase;
   width:          100%;
-  /* transform: translateY(+0.5em); */
 }
 
 .timetable .time {
   color: white;
   font-size: 120%;
   font-weight: bold;
-  margin-right: 5px;
-  padding: 8px;
+  padding:  0 1em;
   text-align: right;
-  transform: translateY(-1em);
+  transform: translateY(-0.5em);
 }
 
 
