--- a/public/css/timetable.css
+++ b/public/css/timetable.css
@@ -64,8 +64,9 @@
 }
 
 .timetable-builder .timetable .table-cell {
-  border     : "1px solid rgba(0,0,0,0.2)";
-  box-sizing : border-box;
+  border-right  : 1px solid rgba(0,0,0,0.2);
+  border-top    : 1px solid rgba(0,0,0,0.2);
+  box-sizing    : border-box;
 }
 
 
