got moving time slot partially work, block does not save if time moved to is before... strange

--- a/public/css/timetable.css
+++ b/public/css/timetable.css
@@ -1,6 +1,6 @@
 
 .timetable-builder .timetable {
-  color:            #CCC;
+  color:            #AAA;
   font-family:        Arial, Helvetica, sans-serif;
   font-size:          1.25vh;
   margin:             0;
