--- a/public/css/site.css
+++ b/public/css/site.css
@@ -28,3 +28,13 @@ body {
 .upload-btn .ant-upload {
   width:         100%;
 }
+
+.open-editor-btn {
+  position:         absolute;
+  background-color: greenyellow;
+  border:           1px solid grey;
+  height:           10px;
+  width:            10px;
+  margin:           5px;
+  border-radius:    5px;
+}
