--- a/public/css/timetable-theme1.css
+++ b/public/css/timetable-theme1.css
@@ -12,11 +12,11 @@
   /* border-radius: 0.5em; */
   border-top-right-radius: 0.5em;
   border-top-left-radius: 0.5em;
-  margin: 0px 3px;
+  margin: 0px 5px;
 }
 
 .timetable .time-column .time {
-  color:   gainsboro;
+  color:     ghostwhite;
   font-size: 12px;
 }
 
