--- a/public/css/timetable-theme1.css
+++ b/public/css/timetable-theme1.css
@@ -43,12 +43,21 @@
   /* border           : 2px solid white; */
 }
 
-/* MARKDOWN STYLING */
-
 .time-block-body {
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+  font-size:   min(1.25vw, 1.25vh);
   line-height: 1.25em;
 }
+
+.timeblock__title {
+  /* display:       inline-block; */
+  font-weight:   bold;
+  line-height:   1.25em;
+  text-align:    center;
+  margin:        1em 0em;
+}
+
+/* MARKDOWN STYLING */
 
 .time-block p,
 .time-block ul,
