--- a/public/css/timetable.css
+++ b/public/css/timetable.css
@@ -1,3 +1,15 @@
+.debug-layout {
+  display:            flex;
+  flex-direction:     row;
+  gap:                4px;
+}
+
+.debug-console {
+  border-left:        2px dashed gray;
+  font-size:          10px;
+  min-height:         10vh;
+  padding:            4px;
+}
 
 .timetable {
   font-family:        Arial, Helvetica, sans-serif;
